fixed the height & alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -27,5 +27,5 @@
 }
 
 .slick-list {
-  height: 100vh !important;
+  height: 80vh !important;
 }
